# weather-vue

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  README.md  index.html  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: plugin_development.md
src/: App.vue  main.ts
src/assets/styles/: main.css
src/components/: CurrentWeather.vue  ErrorMessage.vue  ForecastCard.vue  ForecastStrip.vue  LoadingSpinner.vue  LocationStatus.vue  PermissionNotice.vue  SearchBar.vue  StatCard.vue  WeatherDashboard.vue
src/composables/: useGeocoding.ts  useGeolocation.ts  useWeatherApi.ts
src/data/: mockWeather.ts
src/services/: geocodingService.ts  weatherService.ts
src/stores/: index.ts  locationStore.ts
src/summarizer/: __init__.py  batch.py  cache.py  cli.py  config.py  exceptions.py  formatter.py  logger.py  models.py  profile.py  rate_limiter.py  reporter.py  schemas.py  styles.py  summarize.py  ui.py
src/summarizer/ingestion/: __init__.py  _pipeline.py  extractor.py  fetcher.py  file_reader.py
src/summarizer/llm/: __init__.py  base.py  chunker.py  client.py  factory.py  prompts.py  token_utils.py
src/summarizer/llm/providers/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py
src/summarizer/plugins/: __init__.py  base.py
src/summarizer/plugins/builtin/: __init__.py  keyword_extractor.py  readability.py
src/types/: weather.ts
src/utils/: unitConverters.ts  weatherCodeMap.ts
tests/: test_batch.py  test_cache.py  test_cli.py  test_config.py  test_formatter.py  test_ingestion.py  test_llm_client.py  test_plugins.py  test_profile.py  test_providers.py  test_rate_limiter.py  test_styles.py  test_summarize.py
tests/fixtures/: sample_article.html  sample_article.txt  url_list.txt
