[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summarizer"
version = "0.1.0"
description = "AI-powered article summariser with plugin support"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "openai>=1.0",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
sklearn = ["scikit-learn>=1.3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

# ---------------------------------------------------------------------------
# CLI entry point
# ---------------------------------------------------------------------------

[project.scripts]
summarize = "summarizer.cli:main"

# ---------------------------------------------------------------------------
# Built-in plugin entry points
#
# Third-party plugin packages should add their own [project.entry-points]
# tables following the same pattern.
#
# Groups:
#   summarizer.extractors      – subclasses of BaseExtractor
#   summarizer.postprocessors  – subclasses of BasePostProcessor
#   summarizer.formatters      – subclasses of BaseFormatter
# ---------------------------------------------------------------------------

[project.entry-points."summarizer.postprocessors"]
keyword_extractor = "summarizer.plugins.builtin.keyword_extractor:KeywordExtractor"
readability_scorer = "summarizer.plugins.builtin.readability:ReadabilityScorer"

# Extractor and formatter slots are intentionally empty in the base package –
# they exist to document the entry-point groups for third-party authors.
# Example (uncomment and adjust for your own package):
#
# [project.entry-points."summarizer.extractors"]
# my_extractor = "mypkg.extractors:MyExtractor"
#
# [project.entry-points."summarizer.formatters"]
# my_formatter = "mypkg.formatters:MyFormatter"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/summarizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true