[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "summarizer"
version = "0.1.0"
description = "A lightweight, pluggable article summarizer powered by LLMs."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["summarization", "llm", "nlp", "articles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]
# Optional: richer keyword extraction
sklearn = ["scikit-learn>=1.3"]

[project.scripts]
summarize = "summarizer.cli:main"

# ---------------------------------------------------------------------------
# Plugin entry-point schema
# ---------------------------------------------------------------------------
# Third-party packages declare plugins by adding entry_points in their own
# pyproject.toml / setup.cfg.  The groups and expected base classes are:
#
#   Group                      Base class
#   ─────────────────────────  ──────────────────────────────────────────
#   summarizer.extractors      summarizer.plugins.base.BaseExtractor
#   summarizer.postprocessors  summarizer.plugins.base.BasePostProcessor
#   summarizer.formatters      summarizer.plugins.base.BaseFormatter
#
# Example (third-party plugin package's pyproject.toml):
#
#   [project.entry-points."summarizer.extractors"]
#   my_extractor = "my_package.extractors:MyExtractor"
#
#   [project.entry-points."summarizer.postprocessors"]
#   my_processor = "my_package.processors:MyProcessor"
#
#   [project.entry-points."summarizer.formatters"]
#   my_formatter = "my_package.formatters:MyFormatter"
#
# ---------------------------------------------------------------------------
# Built-in plugins (always available, no extra install required)
# ---------------------------------------------------------------------------
[project.entry-points."summarizer.postprocessors"]
keyword_extractor  = "summarizer.plugins.builtin.keyword_extractor:KeywordExtractor"
readability_scorer = "summarizer.plugins.builtin.readability:ReadabilityScorer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "BLE"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true